duniverse/menhirLib.20200211/test/static/bad/parentheses.mly
%{

let x = { contents = 3 ) }

%}

%start main
%type <int> main

%%

main:
 foo { 2 }


foo:
     { (2 }
