duniverse/menhirLib.20200211/test/static/bad/parentheses.exp
File "parentheses.mly", line 3, characters 8-8:
Error: unbalanced opening brace.
